# contracts_and_projects

./: Dockerfile  README.md  console_interface.py  manage.py  pyproject.toml
contract_manager/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
main/: admin.py  serializers.py  views.py
main/migrations/: 0001_initial.py
main/models/: __init__.py  contract.py  project.py
